--- a/task_manager/locale/ru/LC_MESSAGES/django.po
+++ b/task_manager/locale/ru/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-01-24 20:10+0200\n"
+"POT-Creation-Date: 2021-01-25 09:24+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -74,8 +74,10 @@ msgid "Created at"
 msgstr "Дата создания"
 
 #: task_manager/statuses/templates/statuses/index.html:25
+#: task_manager/statuses/templates/statuses/update.html:12
 #: task_manager/users/templates/users/index.html:26
-msgid "Change"
+#: task_manager/users/templates/users/update.html:12
+msgid "Update"
 msgstr "Изменить"
 
 #: task_manager/statuses/templates/statuses/index.html:27
@@ -83,9 +85,17 @@ msgstr "Изменить"
 msgid "Delete"
 msgstr "Удалить"
 
+#: task_manager/statuses/templates/statuses/update.html:6
+msgid "Status update"
+msgstr "Изменение статуса"
+
 #: task_manager/statuses/views.py:20
 msgid "Status has been created"
 msgstr "Статус успешно создан"
+
+#: task_manager/statuses/views.py:28
+msgid "Status has been updated"
+msgstr "Статус успешно изменён"
 
 #: task_manager/users/mixins.py:8
 msgid "You're not authorized! Please, log in."
@@ -126,10 +136,6 @@ msgstr "Войти"
 #: task_manager/users/templates/users/update.html:6
 msgid "User update"
 msgstr "Изменение пользователя"
-
-#: task_manager/users/templates/users/update.html:12
-msgid "Update"
-msgstr "Изменить"
 
 #: task_manager/users/views.py:23
 msgid "User has been registered"
